Added clients post, put and started cake post
